# proyecto_inmobiliaria

./: README.md  pyproject.toml  requirements.txt
api/config/: __base_config.py  database.py
api/models/: __init__.py  orders.py  property.py  users.py
