[tool.poetry]
name = "proyecto-final"
version = "0.1.0"
description = ""
authors = ["leonardo <leonardocanteros2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.112.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
